# Vision-Aided-Beamformer

./: .gitignore  README.md  pyproject.toml
beamfomig_python.egg-info/: SOURCES.txt
beamforming/: functions.py  main_test.py  steering_vector_test.py
signal_model/: free_field.py
src/beamfomig_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/beamforming/: beamformer.py  beamformer_core.py  draft.py  gain.py  models.py  processors.py  signal_model.py  snapshot_test_v1.py
src/beamforming/algorithms/: constrains.py  lmcv.py  optimizer.py  region_constriant.py
src/beamforming/array/: mic_array.py
src/beamforming/evaluation/: gain.py
src/propagation/: free_field.py
src/utils/: geometry.py  polar_plot.py
tests/: conftest.py  lmcv_point_narrow.py  narrowband_LCMV_test.py  objetcts_test.py  region.py  snapshot_test.py  synth_vs_analitical_gain.py
tests/notebooks/: steering_vector_test.ipynb
